<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/activity_padding"
        android:hint="@string/mail_address"
        android:inputType="textEmailAddress"
        android:text="@string/jozu_mail_address"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        style="@style/BowFlatButtonStyle.Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/sign_in"
        android:theme="@style/BowWhiteRippleButtonTheme" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/mail_address"
        android:layout_marginHorizontal="@dimen/activity_padding" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha_70">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</RelativeLayout>